Fix JWT authentication with correct role handling